--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,21 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.accountscontainer {
+  margin-left: 200px;
+  margin-right: 200px;
+  margin-top: 100px;
+}
+
+.accountdisplay {
+  margin-top: 25px
+}
+
+.welcome {
+  margin-top: 35px;
+  margin-left: 100px;
+  margin-right: 100px;
+  font-family: 'Saira Condensed', sans-serif;
+  font-size: 50px;
+}
