--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,22 @@ body {
 .nav {
   height: 75px;
 }
+
+.performance {
+  font-family: 'Saira Condensed', sans-serif;
+  font-size: 45px;
+  height: 65px;
+}
+
+.performanceSearch {
+  margin-top: 50px;
+}
+
+.performanceContainer {
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.center {
+  text-align: center;
+}
