--- a/src/index.css
+++ b/src/index.css
@@ -27,12 +27,14 @@ body {
 }
 
 .login {
-  margin-top: 500px;
+  margin-top: 100px;
 }
 
 .background {
-  background-image: url('https://www.compoundstockearnings.com/img/slider_img.png');
   height: 800px;
+  margin-top: 75px;
+  margin-left: 100px;
+  margin-right: 100px;
 }
 
 .home {
