set up basic transactionhistory functionality, still have to work on filtering and additional styling

--- a/src/index.css
+++ b/src/index.css
@@ -109,3 +109,9 @@ body {
   margin-left: 75px;
   margin-right: 75px;
 }
+
+.transactionDisplay {
+  margin-top: 50px;
+  margin-left: 75px;
+  margin-right: 75px;
+}
