added some styling to the home page, everything is still working

--- a/src/index.css
+++ b/src/index.css
@@ -180,5 +180,9 @@ body {
   height: 1100px;
   padding-top: 50px;
   border-radius: 25px;
+}
 
+.welcomePerformance {
+  margin-left: 35px;
+  margin-right: 35px;
 }
