worked on styling, everything is still working

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,17 @@ body {
   padding-bottom: 50px;
 }
 
+.newusertransactiondisplay {
+  margin-left: 200px;
+  margin-right: 200px;
+  margin-top: 25px;
+  background-color: rgb(247,247,247);
+  padding-top: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-bottom: 50px;
+}
+
 .accountdisplay {
   margin-top: 50px;
 }
@@ -38,11 +49,12 @@ body {
   margin-top: 30px;
 }
 
-.background {
-  height: 800px;
+.questionairebackground {
+  height: 700px;
   margin-top: 115px;
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-left: 200px;
+  margin-right: 200px;
+  background-color: rgb(247,247,247);
 }
 
 .home {
@@ -127,6 +139,8 @@ body {
   margin-top: 50px;
   margin-left: 75px;
   margin-right: 75px;
+  background-color: rgb(247,247,247);
+  height: auto;
 }
 
 .modal {
@@ -197,7 +211,7 @@ body {
 .newusermessage {
   font-family: 'Saira Condensed', sans-serif;
   font-size: 30px;
-  margin-top: 75px;
+  margin-top: 30px;
   text-align: center;
 }
 
@@ -207,7 +221,24 @@ body {
 }
 
 .newuserlandingheader {
-    margin-top: 100px;
+    margin-top: 5px;
     font-family: 'Saira Condensed', sans-serif;
     font-size: 60px;
+}
+
+.newuserlandingimage {
+    margin-left: 200px;
+    margin-right: 200px;
+    margin-top: 30px;
+    background-color: rgb(247,247,247);
+    padding-top: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 50px;
+}
+
+.performanceSearchDisplay {
+  margin-top: 50px;
+  background-color: rgb(247,247,247);
+  height: 500px;
 }
