--- a/src/index.css
+++ b/src/index.css
@@ -193,11 +193,11 @@ body {
 }
 
 .welcomePerformance {
-  margin-top: 35px;
   margin-left: 35px;
   margin-right: 35px;
   font-family: 'Saira Condensed', sans-serif;
   font-size: 20px;
+  padding-top: 120px;
 }
 
 .accountperformance {
