worked on some more styling, and also working with the chart. Currently hardcoding the chart, but will have to find a gradient package

--- a/src/index.css
+++ b/src/index.css
@@ -242,3 +242,11 @@ body {
   background-color: rgb(247,247,247);
   height: 500px;
 }
+
+form label{
+  font-weight:bold;
+}
+
+ .signupandlogin {
+   margin-top: 125px;
+ }
